Update leaflet post

--- a/_posts/2014-05-28-rendering-times-leaflet-choropleths.html
+++ b/_posts/2014-05-28-rendering-times-leaflet-choropleths.html
@@ -5,9 +5,8 @@ date:   2014-05-24 14:28:32
 categories: performance
 ---
 <div class="demo-content" ng-controller="MapCtrl">
-  <h1>Rendering Times Calculator</h1>
   <p class="hint">
-    Alpha version (with some bugs).<br>Map provided by <a href="https://github.com/tombatossals/angular-leaflet-directive" target="_blank">Angular Leaflet Directives</a> with converted shapefiles from data.cityofchicago.org.
+    Alpha version (with some bugs). Map provided by <a href="https://github.com/tombatossals/angular-leaflet-directive" target="_blank">Angular Leaflet Directives</a> with converted shapefiles from <a href="http://data.cityofchicago.org" target="_tab">data.cityofchicago.org</a>.
   </p>
   <div class="side">
     <p>
